# luaSQLConverter

./: .gitignore  CMakeLists.txt  README.md
include/: ConfigurationManager.h  DatabaseHandler.h  FileHandler.h  LuaEntry.h
src/: ConfigurationManager.cpp  DatabaseHandler.cpp  FileHandler.cpp  main.cpp
